# cora-rc-ai

./: README.md  pyproject.toml
cora_rc_ai/: Makefile  README.md
cora_rc_ai/backend_agentic/: Dockerfile  main.py  requirements.txt
cora_rc_ai/backend_agentic/agents/: __init__.py  compliance_agent.py  dependencies.py  guardrails.py
cora_rc_ai/backend_agentic/models/: embeddings_model.py  llm_router.py
cora_rc_ai/backend_agentic/tools/: citation_tool.py  rag_tool.py  risk_calculator.py
cora_rc_ai/backend_api/: Dockerfile  main.py  requirements.txt
cora_rc_ai/backend_api/core/: config.py  database.py
cora_rc_ai/data_layer/postgres/: schema.sql  schemaV2.sql  verification.sql
cora_rc_ai/data_layer/vector_store/: pgvector_adapter.py
cora_rc_ai/docs/: Architecture_Document.md  Architecture_Review.md  CORA_Complete_Architecture.md  Google_ADK_with_Runner_Usage.md  SARB_Decision_Brief.md  cora-ai.md  cora_github_structure.md
cora_rc_ai/docs/rag/: RAG_Solution_Architecture_Design.md  Testing-Documents-Classifications.md
cora_rc_ai/evaluation/: README.md  __init__.py  config.py  data_sources.py  env_setup.py  eval-requirements.txt  evaluator.py  live_pipeline.py  orchestrator.py  ragas_eval-org.py  ragas_eval.py  ragas_results-GoldData.csv  ragas_results-Persona-Based.csv  ragas_results-RealData.csv  ragas_results.csv  reporters.py  sample_data.py
cora_rc_ai/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
cora_rc_ai/frontend/src/: App.tsx  (+1 more)
cora_rc_ai/k8s/: backend-agentic.yaml  backend-api.yaml  frontend.yaml
(+30 files in other folders)
