[project]
name = "cora-rc-ai"
version = "0.1.0"
readme = "cora_rc_ai/README.md"
description = "Compliance Oriented Regulatory Assistant"
authors = [{ name = "CORA Team" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sse-starlette>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "google-adk>=2.2.0",
    "sentence-transformers>=2.6.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.23.0",
    "ragas>=0.1.0",
    "datasets>=2.18.0",
    "langfuse>=2.20.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    # ragas imports langchain_community.chat_models.vertexai and langchain_openai
    # at import time; those code paths only exist on the langchain 0.3.x line.
    # langchain-community 0.4.x and langchain-core 1.x break the eval, so pin <1 / <0.4.
    "langchain-text-splitters>=0.3.0,<1",
    "langchain-core>=0.3.66,<1",
    "langchain>=0.3.26,<1",
    "langchain-community>=0.3.0,<0.4",
    "langchain-openai>=0.3.0,<0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cora_rc_ai"]

